--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
             <!-- Resume Button -->
 
-            <a href="vidhiresume.pdf" class="resume-button" target="_blank">Download Resume</a>
+            <a href="Vidhi_Mavani_RESUME.pdf" class="resume-button" target="_blank">Download Resume</a>
 
 
         </div>
